worked on project skeleton

--- a/index.html
+++ b/index.html
@@ -9,10 +9,15 @@
 <body>
   <main class="main-container">
     <section class="hero-section">
+      <h1>Dashboard</h1>
+      <div class="hero-">
 
+      </div>
     </section>
     <section class="content-section">
+      <div>
 
+      </div>
     </section>
   </main>
   <script src="script.js"></script>
