--- a/index.html
+++ b/index.html
@@ -1,25 +1,72 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Budgetbuddy</title>
-  <link rel="stylesheet" href="styles.css">
-</head>
-<body>
-  <main class="main-container">
-    <section class="hero-section">
-      <h1>Dashboard</h1>
-      <div class="hero-">
-
-      </div>
-    </section>
-    <section class="content-section">
-      <div>
-
-      </div>
-    </section>
-  </main>
-  <script src="script.js"></script>
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Budgetbuddy</title>
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css"
+    />
+    <link rel="stylesheet" href="styles.css" />
+  </head>
+  <body>
+    <main class="main-container">
+      <section class="hero-section">
+        <h1>Dashboard</h1>
+        <div class="chart-div">
+          <canvas id="myChart"></canvas>
+        </div>
+      </section>
+      <section class="content-section">
+        <div class="content-div">
+          <!-- Modal Trigger -->
+          <div class="income-div">
+            <h3>Income</h3>
+              <a class="waves-effect waves-light btn modal-trigger" data-button="Income" href="#modal1"
+                >Add Income</a
+              >
+          </div>
+          <div class="expenses-div">
+            <h3>Expenses</h3>
+              <a class="waves-effect waves-light btn modal-trigger" data-button="Expenses" href="#modal1"
+              >Add Expenses</a
+              >
+          </div>
+          <!-- Modal Structure -->
+        <form class="col s12" id="form-container" onsubmit="handleSubmit()">
+          <div id="modal1" class="modal">
+            <div class="modal-content">
+              <div class="row">
+                <h3 id="modal-title"></h3>
+                <div class="input-field col s12">
+                  <input
+                    placeholder="Description"
+                    id="description"
+                    type="text"
+                  />
+                  <label for="description">Description</label>
+                </div>
+                <div class="input-field col s12">
+                  <input
+                    placeholder="$100"
+                    id="value"
+                    type="text"
+                    oninput="updateInputValue()"
+                  />
+                  <label for="value">Value</label>
+                </div>
+              </div>
+              <div class="modal-footer">
+              <button class="waves-effect waves-light btn" type="submit">button</button>
+              </div>
+            </div>
+        </div>
+      </form>
+      </section>
+    </main>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+    <script src="script.js"></script>
+  </body>
 </html>
