added localstorage implementation, not finished yet

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
           <!-- Modal Trigger -->
           <div class="income-div">
             <h2>Income</h2>
-              <a class="waves-effect waves-light btn modal-trigger" data-button="Income" href="#modal1"
+              <a class="waves-effect waves-light btn modal-trigger" data-button="Income" href="#modal1" id="income-button"
                 >Add Income</a
               >
               <div id="income-card-container">
@@ -33,8 +33,8 @@
           </div>
           <div class="expenses-div">
             <h2>Expenses</h2>
-              <a class="waves-effect waves-light btn modal-trigger" data-button="Expenses" href="#modal1"
-              >Add Expenses</a
+              <a class="waves-effect waves-light btn modal-trigger" data-button="Expenses" href="#modal1" id="expense-button"
+              >Add Expense</a
               >
               <div id="expense-card-container">
               </div>
@@ -64,7 +64,7 @@
                 </div>
               </div>
               <div class="modal-footer">
-              <button class="waves-effect waves-light btn" type="submit">button</button>
+              <button class="waves-effect waves-light btn" type="submit">Add</button>
               </div>
             </div>
         </div>
